--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sonar-scan",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Wrap sonar-scan as a node module",
   "keywords": [
     "node",
     "sonar",
-    "scanner"
+    "scanner",
+    "sonar-scan"
   ],
   "main": "index.js",
   "bin": {
